Fix: A thin dark line was visible behind video player seek bar

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -782,7 +782,7 @@ progress+span {
 }
 
 .mdl-slider-background-flex-container {
-    backdrop-filter: var(--blurSmallest);
+    /* backdrop-filter: var(--blurSmallest); */
 }
 
 .mdl-slider-background-flex {
